[tool.black]
target-version = ['py37']
skip-magic-trailing-comma = true

[tool.pycln]
all = true
exclude = "main\\.py"

[tool.isort]
profile = "black"
combine_as_imports = true
skip_gitignore = true

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Brendan Graham", email = "bgraham@quora.com"},
]
dependencies = [
    "fastapi-poe==0.0.14",
    "replicate",
    "modal-client>=0.45.1163",
]
requires-python = ">=3.9"
license = {text = "none"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
